# SystemInformationAgent

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  memoryinforeader.cpp  memorystate.cpp  memorystate.h  memorystatereader.cpp  memorystatereader.h  message.cpp  message.h  messagejsonparser.cpp  poller.cpp  poller.h  readout.h  storageinfo.cpp  storageinfo.h  storageinfojsonparser.h  storageinforeader.cpp  storageinforeader.h  storagejsonparser.h  storagestate.cpp  storagestate.h  storagestatereader.cpp  storagestatereader.h  systeminfo.h  systeminfojsonparser.h  systeminforeader.h  systeminformationservice.cpp  systeminfostatereader.h
client/: CMakeLists.txt  main.cpp  messagejsonparser.cpp  storageinfojsonparser.h
core/: jsonserializable.h
server/: CMakeLists.txt  main.cpp  memoryinforeader.cpp  poller.cpp  systeminforeader.h  systeminformationservice.cpp  systeminformationservice.h
shared/: CMakeLists.txt  memoryinfo.cpp  memoryinfo.h  memoryinforeader.h  messagejsonparser.h  storageinfo.h  storageinfojsonparser.cpp  systeminfojsonparser.h  systeminformationservice.rep
shared/core/include/: jsonserializable.h
shared/include/: message.h  storageinfo.h  systeminfo.h
